# jobrun

./: .gitignore  README  README.md  README.rst  TODO  TODO.md  TODO.rst  cleanup  clusterq-config.py  clusterq-setup.py  clusterq.py  clusterq_setup.py  clusterqcfg.py  enqueuer-setup  firstsetup  install.py  j2q-setup-test  job2q-install  job2q-setup  job2q-setup-test  job2q-test-cleanup  job2q-test-setup  job2q_setup  jobq-cfg  jobrun-reload  jobrun-setup  manage.py  setup.cfg  setup.py  test-cleanup  test-setup
clusterq/: abspathlib.py  console.py  console_scripts.py  fileutils.py  initialization.py  main.py  queue.py  readmol.py  readspec.py  scripts.py  shared.py  submission.py  submit.py  utils.py
clusterq/pspecs/: autodock.json5  demon2k.json5  dftbplus.json5  gaussian.json5  orca.json5  vasp.json5
clusterq/qspecs/: lava.json5  lsf.json5  slurm.json5  torque.json5
clusterq/queuespecs/: slurm.json5  torque.json5
develop/: abspathlib_list.py
enqueuer/: chemistry.py  console.py  details.py  fileutils.py  jobexec.py  jobinit.py  jobutils.py  queue.py  specparse.py  utils.py
enqueuer/execs/: launcher
enqueuer/schedulers/: lavalsf.py  platformlsf.py  slurm.py
job2q/: __init__.py  boolparse.py  bunches.py  chemistry.py  classes.py  client.py  colors.py  config.py  configure.py  console.py  decorators.py  defs.py  details.py  dialogs.py  exceptions.py  exec.py.str  fileutils.py  getconf.py  init.py  jobdigest.py  jobexec.py  jobinit.py  jobparse.py  jobremit.py  jobrun.py  jobsetup.py  jobsubmit.py  jobutils.py  main.py  messages.py  parse.py  parsing.py  queue.py  readmol.py  readspec.py  readxmlspec.py  run.py  setup.py  shared.py  specparse.py  (+6 more)
job2q/schedulers/: lavalsf.py  platformlsf.py  slurm.py  slurm.sh
job2queue/: classes.py  exec.py.txt  main.py  parse.py  queue.py  utils.py
jobToQueue/: ._parse.py  aliases.py  classes.py  exec.py.txt  j2q.py  main.py  parse.py  queue.py  utils.py
jobToQueue/schedulers/: lavalsf.py  (+1 more)
jobq/: abspathlib.py  argparsing.py  console_scripts.py  fileutils.py  fileutils_list.py  json5.py  main.py  queue.py  readmol.py  shared.py  submission.py  utils.py
jobrun/: commandargs.py  main.py  submission.py
jobtests/: opt.gjf
queuejob/: console.py  fileutils.py  main.py  messages.py  readmol.py  readspec.py  shared.py  submit.py  utils.py
scripts/: jobsync
tests/: 2a.pdpqt  2a_cox.dpf  cleanup  h2o.gjf  h2o.link1.gjf  h2o.mol  h2o.orca.inp  h2o.template.gjf  h2o.xyz  h2o_opt.gjf  h2o_tpl.gjf  j2q-setup  opt.dftb_in.hsd  opt.gjf  restart.gjf  uv.gjf
(+217 files in other folders)
