[metadata]
name = clusterq
version = 0.2.5b2
url = https://github.com/josemvas/clusterq
description = ClusterQ is a extensible python library and command line tool to submit simulation jobs to HPC clusters
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cluster job hpc
license = LGPLv3+
license_files = LICENSE.md
classifiers =
   Programming Language :: Python :: 3 :: Only
   License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
   Operating System :: POSIX

[options]
python_requires = >=3.6
install_requires =
   pyjson5
   clinterface
packages = find:
scripts =
   scripts/jobsync

[options.package_data]
clusterq =
   qspecs/*.json5
   pspecs/*.json5

[options.entry_points]
console_scripts =
   clusterq-setup = clusterq.scripts:setup
