[metadata]
name = JobQ
version = 0.1.0
url = https://github.com/josemvas/jobq
description = JobQ is a configurable tool to submit simulation jobs to HPC clusters
long_description = file: README.md
long_description_content_type = text/markdown
keywords = job queue hpc cluster
license = LGPLv3+
license_files = LICENSE.md
classifiers =
   Programming Language :: Python :: 3 :: Only
   License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
   Operating System :: POSIX

[options]
python_requires = >=3.6
install_requires =
   json-five
   clinterface
packages = find:
scripts =
   scripts/jobsync

[options.package_data]
jobq =
   specfiles/*/*

[options.entry_points]
console_scripts =
   jobq-config = jobq.console_scripts:config
