[metadata]
name = jobrun
version = 0.1.4
url = https://github.com/josemvas/jobrun
description = Jobrun is a configurable tool to run simulation jobs in HPC clusters
#long_description = file: README.md
long_description_content_type = text/markdown
keywords = job queue hpc cluster
license = LGPLv3+
license_files = LICENSE.md
classifiers =
   Programming Language :: Python :: 3 :: Only
   License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
   Operating System :: POSIX

[options]
python_requires = >=3.6
install_requires =
   json5conf
   boolparse
   abspathlib
   clinterface
packages = find:
scripts =
   scripts/jobsync

[options.package_data]
jobrun =
   database/*/*

[options.entry_points]
console_scripts =
   jobrun-setup = jobrun.config:setup
   jobrun-reload = jobrun.config:reload
